Separated CSS from HTML files

--- a/index.html
+++ b/index.html
@@ -14,82 +14,9 @@
                 document.location.href = 'index-mobile.html';
             }
         </script>
-        <style>
-            #textarea {
-                resize: none;
-                background-color: #181a1b;
-                color:white;
-            }
 
-            #translateBtn {
-                margin-bottom: 0cm;
-                margin-top: 0.5cm;
-                padding-top: 0.2cm;
-                padding-bottom: 0.2cm;
-                padding-right: 1cm;
-                padding-left: 1cm;
-                background-color: #181a1b;
-                color:white;
-                font-size: 17px;
-                text-align:center;
-            }
-
-            #randomBtn {
-                margin-bottom: 0cm;
-                margin-left:1cm;
-                margin-top: 0.5cm;
-                padding-top: 0.2cm;
-                padding-bottom: 0.2cm;
-                padding-right: 1cm;
-                padding-left: 1cm;
-                background-color: #181a1b;
-                color:white;
-                font-size: 17px;
-                text-align:center;
-            }
-
-            #translatedText {
-                border-color:red;
-                border-width:thin;
-                border-style:solid;
-                width:60%;
-                height:30%;
-            }
-
-            #typingSpeedLabel{
-                position:absolute;
-                top:0cm;
-                right:0.3cm;
-            }
-
-            #realisticTypingBtn{
-                background-color: #181a1b;
-                color:white;
-                position:absolute;
-                padding-top: 0.2cm;
-                padding-bottom: 0.2cm;
-                padding-right: 0.5cm;
-                padding-left: 0.5cm;
-                font-size:16px;
-                top:1.2cm;
-                right:0.3cm;
-            }
-
-            #instantTypingBtn{
-                background-color: #181a1b;
-                color:white;
-                position:absolute;
-                padding-top: 0.2cm;
-                padding-bottom: 0.2cm;
-                padding-right: 0.65cm;
-                padding-left: 0.65cm;
-                font-size:16px;
-                top:2.5cm;
-                right:0.3cm;
-            }
-
-            
-        </style>
+		<link rel="stylesheet" href="./styling.css">
+       
     </head>
 
     <body style="background-color:black" onload="initialize()">
@@ -125,7 +52,7 @@
         <p
         style="color:gray"
         id="versionLabel"
-        >v1.2.10</p>
+        >v1.2.11</p>
 
 
         <p
